[metadata]
name = elections
version = 0.0.2
url = https://github.com/thorwhalen/elections
packages = 
		elections
include_package_data = True
platforms = any
description_file = README.md
pkg-dir = .
description = There's a bit of an air of mystery around this project...
license = mit
root_url = https://github.com/thorwhalen/
author = Thor Whalen

